# prolysis

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
prolysis/: __init__.py
prolysis.egg-info/: PKG-INFO  SOURCES.txt
prolysis/analysis/: EMD_based_framework.py  evaluation.py  explainability_extraction.py
prolysis/analysis/python_emsc/: emsc.py  stochastic.py  util.py
prolysis/calls/: minerful_calls.py
prolysis/declare/: __init__.py  discovery.py  evaluation.py  measures.py  signals.py
prolysis/discovery/: discovery.py  subtree_plain.py
prolysis/discovery/base_case/: check.py
prolysis/discovery/candidate_search/: is_allowed.py  is_allowed_2 - Copy.py  is_allowed_2.py  is_allowed_single.py  search - Copy.py  search.py  search_desirability.py
prolysis/discovery/cut_quality/cost_functions/: cost_functions.py
prolysis/rules_handling/: utils.py
prolysis/util/: functions.py  logging.py  redis_connection.py  utils.py  utils0.py
tests/: test_declare_discovery.py  test_declare_evaluation.py  test_imports.py  test_redis_connection.py
